Bug 1366647 - Adopt NS_ASSERT_OWNINGTHREAD for PRThread equality. r=janv

MozReview-Commit-ID: 4j1ifEtrsvD