dom/indexedDB/IDBRequest.h
@@ -19,7 +19,6 @@
   {0xe68901e5, 0x1d50, 0x4ee9, {0xaf, 0x49, 0x90, 0x99, 0x4a, 0xff, 0xc8, 0x39}}
 
 class nsPIDOMWindowInner;
-struct PRThread;
 
 namespace mozilla {
 
@@ -48,10 +47,6 @@ protected:
   RefPtr<IDBCursor> mSourceAsCursor;
 
   RefPtr<IDBTransaction> mTransaction;
-
-#ifdef DEBUG
-  PRThread* mOwningThread;
-#endif
 
   JS::Heap<JS::Value> mResultVal;
   RefPtr<DOMError> mError;
@@ -186,11 +181,9 @@ public:
 
   void
   AssertIsOnOwningThread() const
-#ifdef DEBUG
-  ;
-#else
-  { }
-#endif
+  {
+    NS_ASSERT_OWNINGTHREAD(IDBRequest);
+  }
 
   NS_DECL_ISUPPORTS_INHERITED
   NS_DECL_CYCLE_COLLECTION_SCRIPT_HOLDER_CLASS_INHERITED(IDBRequest,
